# advent-of-code-2018-rs

./: Cargo.toml  LICENSE  README.md  run.sh  test.sh
src/: lib.rs
src/day01/: day01.rs  day1.rs
src/day02/: day02.rs
src/day03/: day03.rs
src/day04/: day04.rs
src/day05/: day05.rs
src/day06/: day06.rs
src/day07/: day07.rs
src/day08/: day08.rs
src/day09/: day09.rs
src/day1/: day1.rs
src/day10/: day10.rs
src/day11/: day11.rs
src/day12/: day12.rs
src/day13/: day13.rs
src/day14/: day14.rs
src/day15/: day15.rs
src/day16/: day16.rs
src/day17/: day17.rs
src/day18/: day18.rs
src/day19/: day19.rs
src/day2/: day2.rs
src/day20/: day20.rs
src/day21/: day21.rs
src/day22/: day22.rs
src/day23/: day23.rs
src/day24/: day24.rs
src/day25/: day25.rs
src/day3/: day3.rs
template/: day.rs  mkday.sh
