[package]
name = "advent-of-code-2018-rs"
version = "0.1.0"
authors = ["Björn Westlin <bwestlin@gmail.com>"]

[dependencies]
regex = "1"
lazy_static = "1.1"

[[bin]]
name = "day01"
path = "src/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/day03.rs"
